feat: add channel element handling in popup

--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -9,7 +9,7 @@
   <body>
     <main>
       <h1>Twitch Ads muter</h1>
-      <p class="hint">Auto-checking current channel…</p>
+      <p id="channel" class="hint">Auto-checking current channel…</p>
       <section class="stats" aria-live="polite">
         <div class="row">
           <span class="label">Live Time</span>
