--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -10,6 +10,10 @@
     <main>
       <h1>Twitch Ads muter</h1>
       <p id="channel" class="hint loading-dots">Auto-checking current channel</p>
+      <section class="ad-stats" aria-live="polite">
+        <p id="mutedToday" class="stat">No ad muted today yet</p>
+        <p id="mutedTotal" class="stat">No ad muted in this channel yet</p>
+      </section>
       <button id="notifyToggle" class="toggle" aria-pressed="true">
         <span class="toggle-label">Audio notifications</span>
         <span class="toggle-switch" aria-hidden="true"></span>
