feat: enhance message handling and logging for popup interactions by exposing them on active tab

--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -9,10 +9,10 @@
   <body>
     <main>
       <h1>Twitch Ads muter</h1>
-      <p id="channel" class="hint loading-dots">Auto-checking current channel</p>
+      <p id="channel" class="hint">Auto-checking current channel</p>
       <section class="ad-stats" aria-live="polite">
         <p id="mutedToday" class="stat">Ads muted today: <span>-</span></p>
-        <p id="mutedTotal" class="stat">Total ads muted in this channel: <span>-</span></p>
+        <p id="mutedTotal" class="stat">Total ads muted: <span>-</span></p>
       </section>
       <button id="notifyToggle" class="toggle" aria-pressed="true">
         <span class="toggle-label">Audio notifications</span>
