feat: implement ad mute with UI toggle
- centralize mute and audio notification preferences

--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -14,6 +14,10 @@
         <p id="mutedToday" class="stat">Ads muted today: <span>-</span></p>
         <p id="mutedTotal" class="stat">Total ads muted: <span>-</span></p>
       </section>
+      <button id="muteToggle" class="toggle" aria-pressed="true">
+        <span class="toggle-label">Mute ads</span>
+        <span class="toggle-switch" aria-hidden="true"></span>
+      </button>
       <button id="notifyToggle" class="toggle" aria-pressed="true">
         <span class="toggle-label">Audio notifications</span>
         <span class="toggle-switch" aria-hidden="true"></span>
