feat: track ad muted duration and update UI for displaying time

--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -13,6 +13,7 @@
       <section class="ad-stats" aria-live="polite">
         <p id="mutedToday" class="stat">Ads muted today: <span>-</span></p>
         <p id="mutedTotal" class="stat">Total ads muted: <span>-</span></p>
+        <p id="mutedTime" class="stat">Total muted time: <span>-</span></p>
       </section>
       <button id="muteToggle" class="toggle" aria-pressed="true">
         <span class="toggle-label">Mute ads</span>
