feat: enhance ad stats display with additional contextual information
- Closes #6

--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -12,8 +12,14 @@
       <p id="channel" class="hint">Auto-checking current channel</p>
       <section class="ad-stats" aria-live="polite">
         <p id="mutedToday" class="stat">Ads muted today: <span>-</span></p>
-        <p id="mutedTotal" class="stat">Total ads muted: <span>-</span></p>
-        <p id="mutedTime" class="stat">Total muted time: <span>-</span></p>
+        <p id="mutedTotal" class="stat">
+          Total ads muted: <span>-</span>
+          <span id="mutedTotalSub" class="stat-sub is-hidden"></span>
+        </p>
+        <p id="mutedTime" class="stat">
+          Total muted time: <span>-</span>
+          <span id="mutedTimeSub" class="stat-sub is-hidden"></span>
+        </p>
       </section>
       <button id="muteToggle" class="toggle" aria-pressed="true">
         <span class="toggle-label">Mute ads</span>
